--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </a>
             <div class="pipe"></div>
             <a href="" class="isiButtonNav isiButtonNavHov3">
-                Call us           
+                Contact us           
             </a>
         </div>
     </nav>
@@ -96,10 +96,92 @@
                 </div>
             </div>
         </section>
+        <section id="about">
+            <div class="judulAbout">
+                About Us
+            </div>
+            <div class="about1">
+                <p class="textAbout1">
+                    We are a team of passionate travel enthusiasts who are looking for an exciting adventure. <span class="pink">Our mission is to provide the best service for you</span>
+                </p>
+                <div class="count">
+                    <div class="borderCount">
+                        <p class="numberCount countAnchor1"></p>
+                        <p class="textCount">
+                            Happy customers
+                        </p>
+                    </div>
+                    <div class="pipe1"></div>
+                    <div class="borderCount">
+                        <p class="numberCount countAnchor2"></p>
+                        <p class="textCount">
+                            Top Hotels
+                        </p>
+                    </div>
+                    <div class="pipe1"></div>
+                    <div class="borderCount">
+                        <p class="numberCount countAnchor3"></p>
+                        <p class="textCount">
+                            Experince Guide
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="package">
+            <div class="judulPackage">
+                Our Package
+            </div>
+            <p class="judulIntiPackage">
+                Discover our exciting packages and enjoy your journey to the fullest
+            </p>
+            <div class="kotakPackage">
+                <div class="kotakPackage1">
+                    <p class="kotakPackageHari">
+                        6 day, 5 night
+                    </p>
+                    <div class="kotakPackageJudulDeskBawah">
+                        <p class="kotakPackageJudul">
+                            All-Inclusive Packages
+                        </p>
+                        <p class="kotakPackageDesk">
+                            This include everything from flights to accommodation, meals, and activies
+                        </p>
+                    </div>
+                </div>
+                <div class="kotakPackage2">
+                    <p class="kotakPackageHari">
+                        4 day, 3 night
+                    </p>
+                    <div class="kotakPackageJudulDeskBawah1">
+                        <p class="kotakPackageJudul">
+                            Cultural Package
+                        </p>
+                        <p class="kotakPackageDesk kotakPackageDesk1">
+                            Focus on cultural experiences such as heritage tours and local performances
+                        </p>
+                    </div>
+                </div>
+                <div class="kotakPackage3">
+                    <p class="kotakPackageHari">
+                        5 day, 4 night
+                    </p>
+                    <div class="kotakPackageJudulDeskBawah1">
+                        <p class="kotakPackageJudul">
+                            Adventure Package
+                        </p>
+                        <p class="kotakPackageDesk kotakPackageDesk1">
+                            Tailored for thril-seekers, offering activities like hiking, diving, or extreme sports
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
 <script src="./js/app.js"></script>
+<script src="./js/onView.js"></script>
 </html>
